# fwf-examples

./: .gitignore  LICENSE  Makefile  README.md  test-app.sh
.github/workflows/: build.yaml  test.yaml
samples/ab-testing/: README.md  spin.toml
samples/ab-testing-cookie/: README.md  spin.toml
samples/ab-testing-kv/: spin.toml
samples/ab-testing-user-agent/: README.md  spin.toml
samples/aggregate-json/: README.md  package-lock.json  package.json  spin.toml
samples/ai-sentiment-analysis/: README.md  spin.toml
samples/ai-sentiment-analysis-ollama/: README.md  package-lock.json  package.json  spin.toml
samples/alter-headers/: README.md  package-lock.json  package.json  spin.toml
samples/auto-complete/: README.md  spin.toml
samples/auto-complete/autocomplete/: Cargo.toml
samples/auto-complete/autocomplete/data/: sample-set.json
samples/auto-complete/autocomplete/src/: lib.rs
samples/block-by-country/: README.md  package-lock.json  package.json  spin.toml  webpack.config.js
samples/block-by-ip/: .gitignore  README.md  package-lock.json  package.json  spin.toml  webpack.config.js
samples/bulk-redirects/: README.md  package-lock.json  package.json  spin.toml
samples/early-hints-rust/: Cargo.toml  readme.md  schema.graphql  spin.toml
samples/early-hints-rust/src/: lib.rs
samples/fetch-json/: .gitignore  README.md  package-lock.json  package.json  spin.toml  tsconfig.json
samples/geo-ip/: .gitignore  Cargo.toml  Makefile  README.md  spin.toml
samples/graphql-stargazer/: Cargo.toml  README.md  spin.toml
samples/graphql-stargazer/src/: lib.rs  query_1.graphql  schema.graphql
samples/html-rewrite/: README.md
samples/jwt-validator/: Cargo.toml  README.md  spin.toml
samples/jwt-validator/crates/jwks-client/: Cargo.toml
samples/jwt-validator/crates/jwks-client/src/: error.rs  jwt.rs  keyset.rs  lib.rs
samples/jwt-validator/src/: lib.rs  models.rs
samples/large-scale-redirects/: .gitignore  Cargo.toml  Makefile  README.md  build.sh  example-redirects.txt  generate-rules.py  spin.toml
samples/large-scale-redirects/rules-manager/: Cargo.toml
samples/large-scale-redirects/rules-manager/src/: main.rs
samples/large-scale-redirects/src/: lib.rs
samples/limit-access/: README.md  package-lock.json  package.json  spin.toml
samples/linode-object-storage-streaming/: .gitignore  package-lock.json  package.json  readme.md  spin.toml
samples/parse-cookie/: README.md  package-lock.json  package.json  spin.toml
samples/read-post/: README.md  package-lock.json  package.json  spin.toml
samples/respond-with-another-site/: README.md  package-lock.json  package.json  spin.toml
samples/response-header-modification/: README.md  package-lock.json  (+3 more)
samples/rewrite-for-bots-price-hiding/: Cargo.toml  README.md  rules.json  spin.toml
samples/rewrite-for-bots-price-hiding/src/: lib.rs
samples/rewrite-for-bots-price-hiding/test-backends/shirt-shop/: spin.toml
samples/rewrite-for-bots-price-hiding/test-backends/shirt-shop/assets/: index.html  store.html
samples/rewrite-for-bots-price-hiding/test-backends/shirt-shop/assets/assets/css/: styles.css
scripts/: build.sh  test.sh
(+143 files in other folders)
