[package]
name = "early-rs"
authors = ["karthik2804 <karthik.ganeshram@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk/", branch = "send-informational" }

[workspace]
