[package]
name = "graphql"
authors = ["Till Schneidereit <till@tillschneidereit.net>"]
description = "GraphQL Stargazer"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
graphql_client = "0.14.0"
spin-sdk = "3.1.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[workspace]
